--- a/src/Paginas/RegisterLogin/App.css
+++ b/src/Paginas/RegisterLogin/App.css
@@ -11,12 +11,10 @@ body {
 
 .logo {
   display: block;
-  margin: 0 auto 1rem auto; /* centraliza horizontal e dá espaçamento apenas embaixo */
-  width: 200px; /* diminui um pouco o tamanho se quiser */
-  height: auto; /* mantém a proporção da imagem */
+  margin: 0 auto 1rem auto;
+  width: 200px;
+  height: auto;
 }
-
-
 
 .login-container {
   flex-wrap: wrap;
@@ -24,19 +22,19 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
+  padding: 1rem;
 }
 
 .login-box {
   background-color: #2c2c2c;
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 12px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   transition: opacity 0.4s ease;
-  opacity: 2;
+  opacity: 1;
   width: 100%;
   max-width: 400px;
 }
-
 
 .login-box.fade {
   opacity: 0.4;
@@ -54,8 +52,10 @@ label {
   font-weight: 500;
 }
 
+input[type="text"],
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="tel"] {
   width: 100%;
   padding: 0.6rem;
   margin-top: 0.3rem;
@@ -64,6 +64,11 @@ input[type="password"] {
   font-size: 1rem;
   background-color: #444;
   color: #fff;
+  box-sizing: border-box;
+}
+
+input::placeholder {
+  color: #ccc;
 }
 
 button {
