--- a/src/Paginas/component/Dashboard.css
+++ b/src/Paginas/component/Dashboard.css
@@ -8,6 +8,35 @@ html, body, #root {
   font-family: 'Segoe UI', sans-serif;
 }
 
+/* Estiliza o input da barra de busca */
+input[type="text"] {
+  width: 100%;
+  max-width: 500px;
+  padding: 12px 18px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 10px;
+  background-color: #0f172a;
+  color: #f1f5f9;
+  outline: none;
+  margin: 0 auto;
+  display: block;
+  transition: box-shadow 0.3s ease, background-color 0.3s ease;
+  box-shadow: 0 0 0 2px transparent;
+}
+
+/* Placeholder */
+input[type="text"]::placeholder {
+  color: #94a3b8;
+}
+
+/* Estilo ao focar */
+input[type="text"]:focus {
+  box-shadow: 0 0 0 2px #9d09bb;
+  background-color: #1e293b;
+}
+
+
 .home-container {
   height: 100vh;           /* ocupa a altura total da viewport */
   width: 100vw;            /* ocupa a largura total da viewport */
@@ -39,7 +68,7 @@ html, body, #root {
 
 .stock-item {
   background-color: #111827;
-  width: 400px;           /* largura fixa */
+  width: 350px;           /* largura fixa */
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.4);
@@ -57,7 +86,7 @@ html, body, #root {
 }
 
 .item-img {
-  width: 100%;
+  width: 300px;
   height: 250px;
   object-fit: cover;
   border-radius: 10px;
